--- a/index.html
+++ b/index.html
@@ -170,88 +170,130 @@
       </section>
 
       <!-- Section: Monthly Awards -->
-      <section id="monthlyAwards" class="col gap--m container--m">
+      <section id="awards" class="col gap--m container--m">
         <div class="section__title">
           <p>Monthly Awards</p>
         </div>
-        <div id="monthlyAwards-content">
-          <div id="awards-list">
-            <div
-              class="card-awards tc--white bg--img"
-              style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
-            >
-              <div class="card-awards-container col gap--m">
-                <div class="card-awards-label">
-                  <label class="ts--body-s">The Winner Of July</label>
+        <div class="section__content">
+          <ul class="awards__list">
+            <li class="awards__item col tc--white">
+              <div
+                class="awards__bg bg--img"
+                style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
+              ></div>
+              <div class="awards__wrapper col gap--m">
+                <div class="awards__name-box">
+                  <label class="awards__name">The Winner Of July</label>
                 </div>
-                <h3 class="serif">The Campus IFA 2020</h3>
-                <h4>Modern Fusion Studio</h4>
-                <div class="donut-chart" style="--num: 8.8">
-                  <svg>
-                    <circle cx="43" cy="43" r="43"></circle>
-                    <circle cx="43" cy="43" r="43"></circle>
+                <h3 class="awards__project serif">The Campus IFA 2020</h3>
+                <h4 class="awards__receiver">Modern Fusion Studio</h4>
+                <div
+                  class="awards__score donutChart"
+                  style="--donutChart-content: 8.8"
+                >
+                  <svg class="donutChart__circle-box">
+                    <circle
+                      class="donutChart__circle"
+                      cx="43"
+                      cy="43"
+                      r="43"
+                    ></circle>
+                    <circle
+                      class="donutChart__circle"
+                      cx="43"
+                      cy="43"
+                      r="43"
+                    ></circle>
                   </svg>
-                  <div class="donut-chart-number">
-                    <h4>8.8</h4>
+                  <div class="donutChart__content-box">
+                    <h4 class="donutChart__content">8.8</h4>
                   </div>
                 </div>
-                <q class="italic">
+                <q class="awards__comment italic">
                   "An awe-inspiring masterpiece that transcends the ordinary and
                   elevates architecture to extraordinary heights.”
                 </q>
               </div>
-            </div>
-            <div
-              class="card-awards tc--white bg--img"
-              style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
-            >
-              <div class="card-awards-container col gap--m">
-                <div class="card-awards-label">
-                  <label class="ts--body-s">The Winner Of July</label>
+            </li>
+            <li class="awards__item col tc--white">
+              <div
+                class="awards__bg bg--img"
+                style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
+              ></div>
+              <div class="awards__wrapper col gap--m">
+                <div class="awards__name-box">
+                  <label class="awards__name">The Winner Of July</label>
                 </div>
-                <h3 class="serif">The Campus IFA 2020</h3>
-                <h4>Modern Fusion Studio</h4>
-                <div class="donut-chart" style="--num: 8.8">
-                  <svg>
-                    <circle cx="43" cy="43" r="43"></circle>
-                    <circle cx="43" cy="43" r="43"></circle>
+                <h3 class="awards__project serif">The Campus IFA 2020</h3>
+                <h4 class="awards__receiver">Modern Fusion Studio</h4>
+                <div
+                  class="awards__score donutChart"
+                  style="--donutChart-content: 8.8"
+                >
+                  <svg class="donutChart__circle-box">
+                    <circle
+                      class="donutChart__circle"
+                      cx="43"
+                      cy="43"
+                      r="43"
+                    ></circle>
+                    <circle
+                      class="donutChart__circle"
+                      cx="43"
+                      cy="43"
+                      r="43"
+                    ></circle>
                   </svg>
-                  <div class="donut-chart-number">
-                    <h4>8.8</h4>
+                  <div class="donutChart__content-box">
+                    <h4 class="donutChart__content">8.8</h4>
                   </div>
                 </div>
-                <q class="italic">
+                <q class="awards__comment italic">
                   "An awe-inspiring masterpiece that transcends the ordinary and
                   elevates architecture to extraordinary heights.”
                 </q>
               </div>
-            </div>
-            <div
-              class="card-awards tc--white bg--img"
-              style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
-            >
-              <div class="card-awards-container col gap--m">
-                <div class="card-awards-label">
-                  <label class="ts--body-s">The Winner Of July</label>
+            </li>
+            <li class="awards__item col tc--white">
+              <div
+                class="awards__bg bg--img"
+                style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
+              ></div>
+              <div class="awards__wrapper col gap--m">
+                <div class="awards__name-box">
+                  <label class="awards__name">The Winner Of July</label>
                 </div>
-                <h3 class="serif">The Campus IFA 2020</h3>
-                <h4>Modern Fusion Studio</h4>
-                <div class="donut-chart" style="--num: 8.8">
-                  <svg>
-                    <circle cx="43" cy="43" r="43"></circle>
-                    <circle cx="43" cy="43" r="43"></circle>
+                <h3 class="awards__project serif">The Campus IFA 2020</h3>
+                <h4 class="awards__receiver">Modern Fusion Studio</h4>
+                <div
+                  class="awards__score donutChart"
+                  style="--donutChart-content: 8.8"
+                >
+                  <svg class="donutChart__circle-box">
+                    <circle
+                      class="donutChart__circle"
+                      cx="43"
+                      cy="43"
+                      r="43"
+                    ></circle>
+                    <circle
+                      class="donutChart__circle"
+                      cx="43"
+                      cy="43"
+                      r="43"
+                    ></circle>
                   </svg>
-                  <div class="donut-chart-number">
-                    <h4>8.8</h4>
+                  <div class="donutChart__content-box">
+                    <h4 class="donutChart__content">8.8</h4>
                   </div>
                 </div>
-                <q class="italic">
+                <q class="awards__comment italic">
                   "An awe-inspiring masterpiece that transcends the ordinary and
                   elevates architecture to extraordinary heights.”
                 </q>
               </div>
-            </div>
-          </div>
+            </li>
+          </ul>
         </div>
       </section>
 
