saved - bem naming

--- a/index.html
+++ b/index.html
@@ -529,92 +529,108 @@
 
       <!-- Section: Saved For Later -->
       <section id="savedForLater" class="col gap--m container--m">
-        <div class="section__title">
+        <div class="section__title row between">
           <p>Saved For Later</p>
           <div class="component-viewAll"></div>
         </div>
-        <div id="savedForLater-content">
-          <ul id="savedForLater-list" class="row gap--m">
-            <li
-              class="card-savedForLater col gap--m tc--white savedForLater-list-item bg--img"
-              style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
-            >
-              <div class="card-savedForLater-text col gap--m">
-                <div>
-                  <label class="topic topic--white ts--btn">topic</label>
+        <div class="seciton__content">
+          <ul class="savedForLater__list row gap--m">
+            <li class="savedForLater__item col gap--m tc--white">
+              <div
+                class="savedForLater__bg bg--img"
+                style="--img-url: url(/data/insights/thumbnail/test.jpg)"
+              ></div>
+              <div class="savedForLater__content col between gap--m">
+                <div class="topic__wrapper">
+                  <label class="topic--white ts--btn">topic</label>
                 </div>
-                <div class="card-savedForLater-title col gap--m">
-                  <h3 class="serif">
+                <div class="savedForLater__txt col gap--m">
+                  <a
+                    href="#"
+                    class="savedForLater__title serif ts--h3 hover--txt"
+                  >
                     List Headline level 2 text for title up to 2 lines
-                  </h3>
-                  <div class="avatar row gap--s">
-                    <p>
-                      <i class="fa-regular fa-circle-user"></i>
-                    </p>
-                    <p>Eleanor Montgomery</p>
+                  </a>
+                  <div class="savedForLater__author avatar row gap--s">
+                    <i
+                      class="author__icon ts--body fa-regular fa-circle-user"
+                    ></i>
+                    <p class="author__name">Eleanor Montgomery</p>
                   </div>
                 </div>
               </div>
             </li>
-            <li
-              class="card-savedForLater col gap--m tc--white savedForLater-list-item bg--img"
-              style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
-            >
-              <div class="card-savedForLater-text col gap--m">
-                <div>
-                  <label class="topic topic--white ts--btn">topic</label>
+            <li class="savedForLater__item col gap--m tc--white">
+              <div
+                class="savedForLater__bg bg--img"
+                style="--img-url: url(/data/insights/thumbnail/test.jpg)"
+              ></div>
+              <div class="savedForLater__content col between gap--m">
+                <div class="topic__wrapper">
+                  <label class="topic--white ts--btn">topic</label>
                 </div>
-                <div class="card-savedForLater-title col gap--m">
-                  <h3 class="serif">
+                <div class="savedForLater__txt col gap--m">
+                  <a
+                    href="#"
+                    class="savedForLater__title serif ts--h3 hover--txt"
+                  >
                     List Headline level 2 text for title up to 2 lines
-                  </h3>
-                  <div class="avatar row gap--s">
-                    <p>
-                      <i class="fa-regular fa-circle-user"></i>
-                    </p>
-                    <p>Eleanor Montgomery</p>
+                  </a>
+                  <div class="savedForLater__author avatar row gap--s">
+                    <i
+                      class="author__icon ts--body fa-regular fa-circle-user"
+                    ></i>
+                    <p class="author__name">Eleanor Montgomery</p>
                   </div>
                 </div>
               </div>
             </li>
-            <li
-              class="card-savedForLater col gap--m tc--white savedForLater-list-item bg--img"
-              style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
-            >
-              <div class="card-savedForLater-text col gap--m">
-                <div>
-                  <label class="topic topic--white ts--btn">topic</label>
+            <li class="savedForLater__item col gap--m tc--white">
+              <div
+                class="savedForLater__bg bg--img"
+                style="--img-url: url(/data/insights/thumbnail/test.jpg)"
+              ></div>
+              <div class="savedForLater__content col between gap--m">
+                <div class="topic__wrapper">
+                  <label class="topic--white ts--btn">topic</label>
                 </div>
-                <div class="card-savedForLater-title col gap--m">
-                  <h3 class="serif">
+                <div class="savedForLater__txt col gap--m">
+                  <a
+                    href="#"
+                    class="savedForLater__title serif ts--h3 hover--txt"
+                  >
                     List Headline level 2 text for title up to 2 lines
-                  </h3>
-                  <div class="avatar row gap--s">
-                    <p>
-                      <i class="fa-regular fa-circle-user"></i>
-                    </p>
-                    <p>Eleanor Montgomery</p>
+                  </a>
+                  <div class="savedForLater__author avatar row gap--s">
+                    <i
+                      class="author__icon ts--body fa-regular fa-circle-user"
+                    ></i>
+                    <p class="author__name">Eleanor Montgomery</p>
                   </div>
                 </div>
               </div>
             </li>
-            <li
-              class="card-savedForLater col gap--m tc--white savedForLater-list-item bg--img"
-              style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
-            >
-              <div class="card-savedForLater-text col gap--m">
-                <div>
-                  <label class="topic topic--white ts--btn">topic</label>
+            <li class="savedForLater__item col gap--m tc--white">
+              <div
+                class="savedForLater__bg bg--img"
+                style="--img-url: url(/data/insights/thumbnail/test.jpg)"
+              ></div>
+              <div class="savedForLater__content col between gap--m">
+                <div class="topic__wrapper">
+                  <label class="topic--white ts--btn">topic</label>
                 </div>
-                <div class="card-savedForLater-title col gap--m">
-                  <h3 class="serif">
+                <div class="savedForLater__txt col gap--m">
+                  <a
+                    href="#"
+                    class="savedForLater__title serif ts--h3 hover--txt"
+                  >
                     List Headline level 2 text for title up to 2 lines
-                  </h3>
-                  <div class="avatar row gap--s">
-                    <p>
-                      <i class="fa-regular fa-circle-user"></i>
-                    </p>
-                    <p>Eleanor Montgomery</p>
+                  </a>
+                  <div class="savedForLater__author avatar row gap--s">
+                    <i
+                      class="author__icon ts--body fa-regular fa-circle-user"
+                    ></i>
+                    <p class="author__name">Eleanor Montgomery</p>
                   </div>
                 </div>
               </div>
